fix contrast on disabled select option

--- a/src/components/select/style/index.less
+++ b/src/components/select/style/index.less
@@ -121,7 +121,7 @@
 		}
 
 		&[aria-selected="true"] {
-			color: var(--select-color-selected);
+			color: var(--text-disabled);
 			background-color: var(--select-bg-option-selected);
 
 			&:hover,
